Updates on user microservice
